package com.blkn.lr.lr_new_server.pojo;

import lombok.Data;

@Data
public class ScoreRange {
    double min;
    double max;
}
